<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThredUp Groups</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_account">My Account</string>
    <string name="no_group">You have not join any group!</string>
    <string name="amount_raised_desc">Amount Raised</string>
    <string name="amount_goal_desc">Groups Goal</string>
    <string name="group_members">Group Members</string>
    <string name="arrow"></string>
    <string name="message">Message This Group</string>
    <string name="add">Add A Groupie</string>
    <string name="donate">Donate To This Group</string>
    <string name="invite">Invite Someone New</string>
    <string name="menu">menu</string>
    <string name="outerRing"></string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="title_activity_main">MainActivity</string>

</resources>