<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<ScrollView 
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/background"
	    tools:context=".GroupDetailActivity" >
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:orientation="vertical">
	
		    <include layout="@layout/group_list_item" />
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:minHeight="150dip"
		        android:orientation="vertical"
		        android:alpha="0.9"
		        android:background="@color/white" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="20dip"
		            android:layout_marginTop="10dip"
		            android:text="@string/group_members"
		            android:textAllCaps="true"
		            android:textSize="11sp"
		            android:textColor="@color/tealText" />
		
		        <TextView
		            android:id="@+id/group_members"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="20dip"
		            android:layout_marginBottom="10dip"
		            android:textColor="@color/black"
		            android:textSize="18sp" />
		
		    </LinearLayout>
	    </LinearLayout>
	
	</ScrollView>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal"
	    android:divider="@android:color/transparent"
	    android:dividerPadding="2dp"
	    android:background="@color/actionBarColor" >
	    
	    <TextView 
	        android:id="@+id/message_button"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:textSize="12sp"
	        android:textAllCaps="true"
	        android:text="@string/message"/>
	    
	    <View 
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:background="@drawable/horizontal_line"/>
	    
	    <TextView 
	        android:id="@+id/invite_button"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:textSize="11sp"
	        android:textAllCaps="true"
	        android:text="@string/invite"/>
	</LinearLayout>

</RelativeLayout>