<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/blackTransparent" >

    <LinearLayout
        android:id="@+id/menu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/message" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:src="@android:drawable/ic_dialog_email"
            android:contentDescription="@string/message" />
        
        <include layout="@layout/horizontal_line"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/add" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:src="@android:drawable/ic_menu_add"
            android:contentDescription="@string/add" />
        
        <include layout="@layout/horizontal_line"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/donate" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:src="@android:drawable/ic_menu_myplaces"
            android:contentDescription="@string/donate" />
        
        <include layout="@layout/horizontal_line"/>
        
    </LinearLayout>

</LinearLayout>